--- a/KucoinApi.Example/KuСoinApi.Example.csproj
+++ b/KucoinApi.Example/KuСoinApi.Example.csproj
@@ -7,6 +7,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PoissonSoft.CommonUtils\Src\PoissonSoft.CommonUtils\PoissonSoft.CommonUtils.csproj" />
-    <ProjectReference Include="..\PoissonSoft.KucoinApi\PoissonSoft.KucoinApi.csproj" />
+    <ProjectReference Include="..\PoissonSoft.KucoinApi\PoissonSoft.KuСoinApi.csproj" />
   </ItemGroup>
 </Project>
