--- a/PoissonSoft.KucoinApi/PoissonSoft.KuСoinApi.csproj
+++ b/PoissonSoft.KucoinApi/PoissonSoft.KuСoinApi.csproj
@@ -14,4 +14,8 @@
     <Reference Include="System.Web" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Account\" />
+  </ItemGroup>
+
 </Project>
