--- a/PoissonSoft.KucoinApi/PoissonSoft.KuCoinApi.csproj
+++ b/PoissonSoft.KucoinApi/PoissonSoft.KuCoinApi.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="UserDataStream\Class1.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Humanizer" Version="2.11.10" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NLog" Version="4.7.5" />
@@ -13,10 +17,6 @@
   <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <Reference Include="System.Web" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="WebSocket\" />
   </ItemGroup>
 
 </Project>
