--- a/PoissonSoft.KucoinApi/PoissonSoft.KuCoinApi.csproj
+++ b/PoissonSoft.KucoinApi/PoissonSoft.KuCoinApi.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="UserDataStream\Class1.cs" />
+    <Compile Remove="DataStream\Class1.cs" />
   </ItemGroup>
 
   <ItemGroup>
